I changed the name
I replaced sachitha's name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>This is a sample html project in html</h1>
     <form action="/action_page.php">
     <label for="fname">first name:</label><br>
-    <input type="text" id="fname" name="fname" value="Sujena"><br>
+    <input type="text" id="fname" name="fname" value="Razeen"><br>
     <label for="lname">Last name:</label><br>
     <input type="text" id="lname" name="lname" value="Sachithananthan"><br><br>
     <label for="fage">Age:</label><br>
